--- a/agent/conf/agent.properties
+++ b/agent/conf/agent.properties
@@ -263,3 +263,6 @@ iscsi.session.cleanup.enabled=false
 # Automatically clean up iscsi sessions not attached to any VM.
 # Should be enabled for users using managed storage for example solidfire.
 # Should be disabled for users with unmanaged iscsi connections on their hosts
+#
+#This parameter specifies if the host must be rebooted when something go wrong with heartbeat.
+# reboot.host.and.alert.management.on.hearbeat.timeout=true
